attempt to fix bg image on mobile too large issue

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -88,7 +88,8 @@ body, html, main {
 
 .cd-fixed-bg {
     min-height: 100%;
-    background-size: cover;
+    background-size: 100%;
+    width: 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center center;
